chore: update dependencies for authentication and UI features
- add jsonwebtoken, bcrypt, cookie-parser for backend auth
- add sonner for toast notifications
- add shadcn/ui components: command, dropdown-menu, popover
- update @types packages for new backend dependencies

This commit updates project dependencies to support the new
authentication system and UI components.

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "test:coverage": "vitest --coverage",
     "lint": "eslint src --ext .ts",
     "db:migrate": "tsx src/storage/migrations/run.ts",
-    "db:seed": "tsx src/storage/seeds/run.ts"
+    "db:seed": "tsx src/storage/seeds/run.ts",
+    "migrate:unknown-to-failed": "tsx src/scripts/migrate-unknown-to-failed.ts"
   },
   "keywords": [
     "inbox",
