chore: update gitignore for runtime and config files
- ignore PID files for backend and frontend processes
- ignore .claude directory for Claude Code configuration
- optionally ignore root package.json
- ignore all *.pid files pattern

This commit ensures runtime files and configuration are not
accidentally committed to the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,14 @@ temp/
 
 # 系统文件
 Thumbs.db
+
+# 运行时文件
+*.pid
+.backend.pid
+.frontend.pid
+
+# Claude Code 配置
+.claude/
+
+# 项目根目录文件（可选）
+package.json
