chore: update gitignore to exclude test artifacts and local plugins
- add test-results/ for Playwright and test execution artifacts
- add playwright-report/ for test reports
- add plugins/ for local development directories

--- a/.gitignore
+++ b/.gitignore
@@ -35,10 +35,18 @@ uploads/
 coverage/
 .nyc_output/
 
+# 测试运行产物
+test-results/
+playwright-report/
+playwright/.cache/
+
 # 临时文件
 tmp/
 temp/
 .cache/
+
+# 本地插件和开发工具
+plugins/
 
 # 系统文件
 Thumbs.db
