--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "vitest",
+    "test:watch": "vitest --watch",
     "test:coverage": "vitest --coverage",
+    "test:api": "vitest tests/api",
     "lint": "eslint src --ext .ts",
     "db:migrate": "tsx src/storage/migrations/run.ts",
     "db:seed": "tsx src/storage/seeds/run.ts",
@@ -25,31 +27,33 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "better-sqlite3": "^9.2.2",
-    "dotenv": "^16.3.1",
-    "zod": "^3.22.4",
-    "uuid": "^9.0.1",
     "axios": "^1.6.5",
+    "better-sqlite3": "^9.2.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
     "pino": "^8.17.2",
     "pino-pretty": "^10.3.1",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5"
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.9",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.5",
-    "@types/better-sqlite3": "^7.6.9",
+    "@types/supertest": "^6.0.3",
     "@types/uuid": "^9.0.7",
-    "@types/cors": "^2.8.17",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
+    "@vitest/coverage-v8": "^1.2.1",
     "eslint": "^8.56.0",
-    "typescript": "^5.3.3",
+    "supertest": "^7.2.2",
     "tsx": "^4.7.0",
-    "vitest": "^1.2.1",
-    "@vitest/coverage-v8": "^1.2.1"
+    "typescript": "^5.3.3",
+    "vitest": "^1.2.1"
   },
   "engines": {
     "node": ">=18.0.0"
