fix(auth): revert to scopes-based permission system
Revert previous role-based changes and implement correct scopes logic:
- All password-login users get 'admin:full' scope
- API Keys keep their configured scopes
- Permission checks use scopes.includes('admin:full')

Changes:
- backend/src/utils/jwt.ts: Add scopes field to TokenPayload
- backend/src/auth/auth.service.ts: Assign admin scopes to all login users
- backend/src/middleware/auth.ts: Use scopes from token instead of hardcoded
- backend/src/storage/database.ts: Remove getAllUsers() method
- web/src/types/index.ts: Add scopes to User interface
- web/src/app/(dashboard)/settings/logs/page.tsx: Use scopes for permission check
- web/src/app/(dashboard)/settings/api-keys/[id]/logs/page.tsx: Use scopes for permission check

Cleanup:
- Delete backend/scripts/make-admin.ts (no longer needed)
- Delete backend/docs/fix-admin-permission.md (outdated)
- Remove make-admin script from package.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,7 @@
     "lint": "eslint src --ext .ts",
     "db:migrate": "tsx src/storage/migrations/run.ts",
     "db:seed": "tsx src/storage/seeds/run.ts",
-    "migrate:unknown-to-failed": "tsx src/scripts/migrate-unknown-to-failed.ts",
-    "make-admin": "tsx src/scripts/make-admin.ts"
+    "migrate:unknown-to-failed": "tsx src/scripts/migrate-unknown-to-failed.ts"
   },
   "keywords": [
     "inbox",
