--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/multer": "^2.0.0",
     "axios": "^1.6.5",
     "better-sqlite3": "^9.2.2",
     "cors": "^2.8.5",
@@ -34,6 +35,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
+    "multer": "^2.0.2",
     "pino": "^8.17.2",
     "pino-pretty": "^10.3.1",
     "uuid": "^9.0.1",
