--- a/cli/package.json
+++ b/cli/package.json
@@ -23,21 +23,23 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "commander": "^11.1.0",
     "axios": "^1.6.5",
     "chalk": "^5.3.0",
-    "ora": "^8.0.1",
     "cli-table3": "^0.6.3",
-    "inquirer": "^9.2.12",
+    "commander": "^11.1.0",
     "conf": "^12.0.0",
     "dotenv": "^16.3.1",
-    "external-editor": "^3.1.0"
+    "external-editor": "^3.1.0",
+    "form-data": "^4.0.5",
+    "inquirer": "^9.2.12",
+    "ora": "^8.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20.11.5",
+    "@types/form-data": "^2.2.1",
     "@types/inquirer": "^9.0.7",
-    "typescript": "^5.3.3",
+    "@types/node": "^20.11.5",
     "tsx": "^4.7.0",
+    "typescript": "^5.3.3",
     "vitest": "^1.2.1"
   },
   "engines": {
