feat(backend): add MCP adapter system for dynamic tool routing
- add MCP SDK dependency (@modelcontextprotocol/sdk)
- implement MCP HTTP and stdio client transports
- add McpAdapter and McpHttpAdapter for tool-based distribution
- extend RouterService with MCP connector management
- add MCP connector test endpoint and CRUD operations
- add LLM mapping service for intelligent tool selection
- extend database schema with mcp_connectors table
- add MCP-related types (McpConnector, McpTool, etc.)
- enhance NotionAdapter with appendToPage capability

--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.25.3",
     "@types/multer": "^2.0.0",
     "axios": "^1.6.5",
     "better-sqlite3": "^9.2.2",
