--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "lint": "eslint src --ext .ts",
     "db:migrate": "tsx src/storage/migrations/run.ts",
     "db:seed": "tsx src/storage/seeds/run.ts",
-    "migrate:unknown-to-failed": "tsx src/scripts/migrate-unknown-to-failed.ts"
+    "migrate:unknown-to-failed": "tsx src/scripts/migrate-unknown-to-failed.ts",
+    "mcp": "tsx src/mcp/server.ts"
   },
   "keywords": [
     "inbox",
