--- a/backend/.env.example
+++ b/backend/.env.example
@@ -24,7 +24,8 @@ LLM_MAX_TOKENS=2000
 
 # Storage
 UPLOAD_DIR=./data/uploads
-MAX_UPLOAD_SIZE=10485760
+MAX_UPLOAD_SIZE=104857600
+MAX_UPLOAD_FILES=20
 
 # Logging
 LOG_LEVEL=debug
