--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,7 @@ Thumbs.db
 web/tests/
 
 # 项目根目录文件（可选）
-package.json
+/package.json
 
 # Kiro IDE config
 .kiro/
@@ -91,3 +91,5 @@ worktrees/
 deploy/env/.env.prod
 deploy/certbot/conf/
 deploy/certbot/www/
+# Channel bot deploy secrets
+deploy/channel-bot/.env.prod
