fix(cli): improve auth session handling and simplify config
- prevent refresh recursion on auth endpoints and expired token states

- add session checks that refresh tokens before protected operations

- simplify configuration options and remove unused display settings

--- a/cli/package.json
+++ b/cli/package.json
@@ -11,7 +11,8 @@
     "dev": "tsx watch src/cli.ts",
     "build": "tsc",
     "start": "node dist/cli.js",
-    "test": "vitest"
+    "test": "vitest",
+    "postbuild": "chmod +x dist/cli.js"
   },
   "keywords": [
     "cli",
