--- a/cli/.env.example
+++ b/cli/.env.example
@@ -1,11 +1,10 @@
 # SuperInbox CLI Configuration
 
 # API Endpoint
-API_BASE_URL=http://localhost:3000/v1
+API_BASE_URL=http://localhost:3001/v1
 
-# API Key (默认开发密钥)
-API_KEY=dev-key-change-this-in-production
+# API timeout (ms)
+API_TIMEOUT=30000
 
 # Default options
 DEFAULT_SOURCE=cli
-DEFAULT_TYPE=text
