feat(channel-bot): make core api key optional and trim env templates
- allow channel bot core api client to run without a default api key

- update list message formatting to reduce noisy status markers

- align deploy and env examples with the new minimal required variables

--- a/channel-bot/.env.example
+++ b/channel-bot/.env.example
@@ -4,7 +4,8 @@ NODE_ENV=development
 
 # SuperInbox Core API
 CORE_API_URL=http://localhost:3001/v1
-CORE_API_KEY=your-api-key
+# Enabled channels: telegram,lark,wework
+ENABLED_CHANNELS=telegram,lark
 
 # Database (User Mapping)
 DATABASE_PATH=./data/channel-bot.db
@@ -15,14 +16,5 @@ TELEGRAM_BOT_TOKEN=your-telegram-bot-token
 # Lark (if enabled)
 LARK_APP_ID=your-lark-app-id
 LARK_APP_SECRET=your-lark-app-secret
-LARK_VERIFICATION_TOKEN=your-verification-token
-LARK_ENCRYPT_KEY=your-encrypt-key
-
-# Wework (if enabled)
-WEWORK_CORP_ID=your-corp-id
-WEWORK_AGENT_ID=your-agent-id
-WEWORK_SECRET=your-secret
-
-# Logging
-LOG_LEVEL=debug
-LOG_FORMAT=json
+# Optional in socket mode; required in callback mode for event verification
+LARK_VERIFICATION_TOKEN=
