--- a/deploy/channel-bot/.env.prod.example
+++ b/deploy/channel-bot/.env.prod.example
@@ -1,16 +1,7 @@
-# Channel Bot runtime
-NODE_ENV=production
-PORT=3002
-
 # Core API (recommended to use public domain for independent deployment)
 CORE_API_URL=https://www.superinbox.top/v1
-CORE_API_KEY=replace_with_channel_bot_api_key
-
 # Enabled channels: telegram,lark,wework
 ENABLED_CHANNELS=telegram,lark
-
-# Channel bot local db path in container
-DATABASE_PATH=/app/data/channel-bot.db
 
 # Telegram
 TELEGRAM_BOT_TOKEN=
@@ -18,9 +9,5 @@ TELEGRAM_BOT_TOKEN=
 # Lark (socket long connection mode)
 LARK_APP_ID=
 LARK_APP_SECRET=
+# Optional in socket mode; required in callback mode for event verification
 LARK_VERIFICATION_TOKEN=
-LARK_ENCRYPT_KEY=
-
-# Logging
-LOG_LEVEL=info
-LOG_FORMAT=json
