--- a/deploy/env/.env.prod.example
+++ b/deploy/env/.env.prod.example
@@ -4,26 +4,13 @@ LETSENCRYPT_EMAIL=admin@example.com
 # Set to 1 to use Let's Encrypt staging environment during testing
 STAGING=0
 
-# ===== Backend app config =====
-API_KEY_PREFIX=sinbox
-DEFAULT_API_KEY=change-this-api-key
-
+# ===== Backend runtime =====
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
-
-LLM_PROVIDER=openai
-LLM_API_KEY=replace-with-your-llm-key
-LLM_MODEL=gpt-4
-LLM_BASE_URL=https://api.openai.com/v1
-LLM_TIMEOUT=30000
-LLM_MAX_TOKENS=2000
 
 MAX_UPLOAD_SIZE=104857600
 MAX_UPLOAD_FILES=20
 
 LOG_LEVEL=info
-LOG_FORMAT=json
 
 JWT_SECRET=replace-with-a-long-random-string
-JWT_EXPIRES_IN=7d
-ENCRYPTION_KEY=replace-with-32-char-random-key
