--- a/cli/.env.example
+++ b/cli/.env.example
@@ -1,7 +1,10 @@
 # SuperInbox CLI Configuration
 
-# API Endpoint
+# Backend API base URL (must include /v1)
 API_BASE_URL=http://localhost:3001/v1
+
+# Frontend web base URL
+WEB_BASE_URL=http://localhost:3000
 
 # API timeout (ms)
 API_TIMEOUT=30000
