--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
+    "preinstall": "node scripts/check-node-version.cjs",
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
@@ -31,12 +32,15 @@
     "@modelcontextprotocol/sdk": "^1.25.3",
     "@types/multer": "^2.0.0",
     "axios": "^1.6.5",
+    "bcrypt": "^5.1.1",
     "better-sqlite3": "^9.2.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "pino": "^8.17.2",
     "pino-pretty": "^10.3.1",
@@ -45,8 +49,11 @@
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.9",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.11.5",
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^9.0.7",
@@ -60,6 +67,6 @@
     "vitest": "^1.2.1"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0 <23"
   }
 }
