--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,9 @@ Thumbs.db
 .agent/
 
 # Web 测试文件
-web/tests/
+web/tests/*
+!web/tests/api-keys.spec.ts
+!web/tests/inbox-detail-page.spec.ts
 
 # 项目根目录文件（可选）
 /package.json
