--- a/packages/mcp-server/package.json
+++ b/packages/mcp-server/package.json
@@ -19,9 +19,11 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.25.3",
     "axios": "^1.6.5",
+    "form-data": "^4.0.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/form-data": "^2.2.1",
     "@types/node": "^20.11.5",
     "typescript": "^5.3.3",
     "vitest": "^1.6.1"
